--- a/style.css
+++ b/style.css
@@ -16,5 +16,23 @@ margin: 0;
 
 .container{
     display: grid;
-    
+    grid-template-columns: repeat(3,1fr);
+    width: 940px;
+    gap: 20px;
+    margin: auto;
 }
+.card {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 20px Orgba(0,0,0,0.1);
+    overflow: hidden;
+    width: 300px;
+
+}
+.card-header img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+
+}
+
