--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ height: 100vh;
 margin: 0;
 }
 
-.container{
+.container {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     width: 940px;
@@ -26,13 +26,79 @@ margin: 0;
     border-radius: 10px;
     box-shadow: 0 2px 20px Orgba(0,0,0,0.1);
     overflow: hidden;
-    width: 300px;
+    width: 280px;
 
 }
-.card-header img{
+.card-header img {
     width: 100%;
     height: 200px;
     object-fit: cover;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 10px;
+    min-height: 250px;
+}
+
+.tag {
+    background: #dddd;
+    border-radius: 50px;
+    font-size: 12px;
+    margin: 0;
+    color: white;
+    padding: 2px 10px;
+    text-transform: uppercase ;
+}
+
+.tag-green {
+    background-color: #92d4e4;  
+}
+
+.tag-blue {
+    background-color: #3d1d94;
+}
+   
+.tag-pink {
+    background-color: #c62bcb;
+}
+
+.card-body p {
+    font-size: 13px;
+    margin: 0 0 40px;
+}
+
+.card-body h4 {
+    margin: 10px 0px;
+}
+
+.user {
+    display: flex;
+    margin-top: auto;
+}
+
+.user img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
 
 }
 
+.user-info h5 {
+    margin: 0;
+
+}
+
+.user-info small {
+    color: #888785;
+}
+
+@media (max-width: 940px){
+    .container {
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+}
